# acuity-index

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  Cargo.toml  JSON-RPC-MIGRATION-PLAN.md  README.md  SECURITY.md  acuity.toml  justfile
book/: book.toml
book/src/: SUMMARY.md  api.md  architecture.md  benchmarking.md  cli.md  configuration.md  contributing.md  index.md  installation.md  operations.md  quickstart.md  recipes.md  security.md  synthetic-devnet.md
chains/: kusama.toml  paseo.toml  polkadot.toml  synthetic.toml  westend.toml
runtime/: Cargo.toml  build.rs
runtime/pallets/synthetic/: Cargo.toml
runtime/pallets/synthetic/src/: lib.rs
runtime/src/: lib.rs
src/: config.rs  config_gen.rs  errors.rs  event_hydration.rs  indexer.rs  lib.rs  main.rs  metrics.rs  pallets.rs  protocol.rs  runtime_state.rs  shared.rs  synthetic_devnet.rs  tests.rs  websockets.rs
src/tests/: config_gen_tests.rs  config_tests.rs  indexer_tests.rs  pallets_tests.rs  shared_tests.rs  websocket_tests.rs
src/ws_api/: listener.rs  mod.rs  requests.rs  session.rs  tests_support.rs  validation.rs
tests/: synthetic_integration.rs
tests/common/: mod.rs
