[package]
name = "acuity-index"
version = "0.8.0"
edition = "2024"
authors = ["Jonathan Brown"]
description = "Configurable omni-indexer for Substrate blockchains."
homepage = "https://index.acuity.network/"
repository = "https://github.com/acuity-network/acuity-index"
license = "Apache-2.0"

[[bin]]
name = "acuity-index"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
byte-unit = "5.2"
byteorder = "1.5"
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = "3"
futures = "0.3"
hex = "0.4"
home = "0.5"
notify = "6"
num-format = "0.4"
prometheus-client = "0.24"
scale-info = "2.11"
scale-value = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
sled = "0.34"
sp-crypto-hashing = "0.1.0"
subxt = "0.50.0"
subxt-signer = "0.50.0"
thiserror = { version = "2", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
toml = "1.1.0"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"
zerocopy = "0.8.47"
zerocopy-derive = "0.8.47"

[dev-dependencies]
sp-core = "39.0.0"
sp-state-machine = "0.50.0"
sp-trie = "43.0.0"
subxt-lightclient = { version = "0.50.0", features = ["native"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
strip = "symbols"
