[package]
name = "synthetic-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
pallet-synthetic = { path = "pallets/synthetic", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, features = [
    "cumulus-primitives-core",
    "pallet-aura",
    "runtime",
    "pallet-balances",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "sp-consensus-aura",
    "sp-keyring",
    "staging-parachain-info",
] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }

[build-dependencies]
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-synthetic/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "serde_json/std",
]
